--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Muli:300,700&display=swap');
-
+ 
 * {
   box-sizing: border-box;
 }
-
+ 
 body {
   background-color: #fbfcfe;
   font-family: 'Muli', sans-serif;
@@ -14,47 +14,50 @@ body {
   overflow: hidden;
   margin: 0;
 }
-
+ 
 .container {
   background-color: #fff;
-  border: 3px #000 solid;
   border-radius: 10px;
   padding: 30px;
-  max-width: 1000px;
+  max-width: 1100px;
   text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-
+ 
 .code-container {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 40px 0;
+ 
 }
-
+ 
 .code {
-  caret-color: transparent;
   border-radius: 5px;
   font-size: 75px;
   height: 120px;
   width: 100px;
   border: 1px solid #eee;
+    outline-width: thin;;
+    outline-color: #ddd;
   margin: 1%;
   text-align: center;
   font-weight: 300;
   -moz-appearance: textfield;
+  margin-left: 10px;
 }
-
+ 
 .code::-webkit-outer-spin-button,
 .code::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
+ 
 .code:valid {
-  border-color: #3498db;
-  box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.25);
+  border-color: #1DBF73;
+box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
-
+ 
 .info {
   background-color: #eaeaea;
   display: inline-block;
@@ -64,12 +67,12 @@ body {
   color: #777;
   border-radius: 5px;
 }
-
+ 
 @media (max-width: 600px) {
   .code-container {
     flex-wrap: wrap;
   }
-
+ 
   .code {
     font-size: 60px;
     height: 80px;
